# LogFilter

./: Cargo.toml  README.md  README_zh.md  build.rs  generate_test_data.py
.claude/plans/: interaction-optimizations.md  perf-optimizations.md
.github/workflows/: ci.yml  release.yml
assets/i18n/: en-US.egl  zh-CN.egl
src/: adb.rs  app.rs  config.rs  filter.rs  fonts.rs  io.rs  lock.rs  main.rs  model.rs  parser.rs  ui_util.rs
