[package]
name = "logfilter"
version = "0.1.0"
edition = "2021"
description = "Android logcat viewer/filter, Rust port of the Java Swing LogFilter"
license = "MIT"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.28"
egui_extras = "0.28"
crossbeam-channel = "0.5"
regex = "1"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
encoding_rs = "0.8"
sys-locale = "0.3"
arboard = "3"
rfd = "0.14"
anyhow = "1"
egui-i18n = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ttf-parser = "0.20"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
